swi-prolog (5.10.0-1) UNRELEASED; urgency=low

  * New upstream release. (Closes: #587994)
  * Update package index after installing -nox which was resulting in
    incomplete installations after upgrading from lenny. (Closes: #585870)
  * Remove unneeded manpage section patch.
  * Update patches for latest swi-prolog version.
  * Remove reference to xpce.1 manpage (removed upstream).

 -- Chris Lamb <lamby@debian.org>  Fri, 09 Jul 2010 16:42:25 +0100

swi-prolog (5.8.2-2) unstable; urgency=low

  * Drop duplicate libjpeg62-dev, libxpm-dev and libxt-dev Build-Depends.
  * Replace libjpeg62-dev Build-Dependency with libjpeg-dev.
  * Fix FTBFS on GNU/kFreeBSD. Thanks to Petr Salinger
    <Petr.Salinger@seznam.cz>. (Closes: #571078)
  * Switch to dpkg-source 3.0 (quilt) format
  * Bump Standards-Version to 3.8.4.

 -- Chris Lamb <lamby@debian.org>  Wed, 24 Feb 2010 22:08:03 +0000

swi-prolog (5.8.2-1) unstable; urgency=low

  * New upstream release.
  * Re-arrange binary packages at upstream's request:
    - Rename -xpce to -x
    - Rename -jpl to -java
    - Rename "swi-prolog" to -nox and merge -clib, -http, -semweb, -sgml
      and -table into it
    - The "swi-prolog-odbc" package remains unchanged
    - A new "swi-prolog" package depends on both "swi-prolog-nox" and
      "swi-prolog-x"

 -- Chris Lamb <lamby@debian.org>  Wed, 06 Jan 2010 00:39:12 +0000

swi-prolog (5.8.0-1) unstable; urgency=low

  * New upstream release.
    - Local copy of strndup renamed to my_strndup. (Closes: #552847)
  * Replace libreadline5-dev dependencies with libreadline-dev.
  * Fix bad jpl.jar symlink in "main" swi-prolog package by using
    debian/swi-prolog-jpl.links instead of specifying it in debian/rules
    to ensure it ends up in the right package. (Closes: #549628)

 -- Chris Lamb <lamby@debian.org>  Thu, 29 Oct 2009 19:17:06 +0000

swi-prolog (5.6.64-3) unstable; urgency=low

  * Include CHR library in swi-prolog package. (Closes: #541183)