@@ -6,6 +6,7 @@ swi-prolog (5.10.0-1) UNRELEASED; urgency=low
   * Remove unneeded manpage section patch.
   * Update patches for latest swi-prolog version.
   * Remove reference to xpce.1 manpage (removed upstream).
+  * libpl.so => libswipl.so.
 
  -- Chris Lamb <lamby@debian.org>  Fri, 09 Jul 2010 16:42:25 +0100
 
